--- a/Venus_position/Venus_pos.ipynb
+++ b/Venus_position/Venus_pos.ipynb
@@ -49,6 +49,37 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "INNER_SOLSYS_DF = pd.DataFrame()\n",
+    "INNER_SOLSYS_DF.loc[:, \"ET\"] = TIME_INTERVAL_ET\n",
+    "INNER_SOLSYS_DF.loc[:, \"UTC\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
+    "    lambda x: spiceypy.et2datetime(et=x)\n",
+    ")\n",
+    "\n",
+    "INNER_SOLSYS_DF.loc[:, \"EARTH_VEN2SUN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
+    "    lambda x: np.degrees(\n",
+    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"10\", obsrvr=\"299\", abcorr=\"LT+S\")\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "INNER_SOLSYS_DF.loc[:, \"EARTH_MOON2SUN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
+    "    lambda x: np.degrees(\n",
+    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"10\", obsrvr=\"301\", abcorr=\"LT+S\")\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "INNER_SOLSYS_DF.loc[:, \"EARTH_MOON2VEN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
+    "    lambda x: np.degrees(\n",
+    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"299\", obsrvr=\"301\", abcorr=\"LT+S\")\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -76,6 +107,7 @@
        "      <th>EARTH_VEN2SUN_ANGLE</th>\n",
        "      <th>EARTH_MOON2SUN_ANGLE</th>\n",
        "      <th>EARTH_MOON2VEN_ANGLE</th>\n",
+       "      <th>GOOD_VISIBILITY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -86,6 +118,7 @@
        "      <td>13.084034</td>\n",
        "      <td>25.079659</td>\n",
        "      <td>38.031508</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -94,6 +127,7 @@
        "      <td>13.025223</td>\n",
        "      <td>24.498022</td>\n",
        "      <td>37.395046</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -102,6 +136,7 @@
        "      <td>12.966408</td>\n",
        "      <td>23.916378</td>\n",
        "      <td>36.758716</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -110,6 +145,7 @@
        "      <td>12.907590</td>\n",
        "      <td>23.334757</td>\n",
        "      <td>36.122553</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -118,9 +154,11 @@
        "      <td>12.848770</td>\n",
        "      <td>22.753195</td>\n",
        "      <td>35.486595</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -134,6 +172,7 @@
        "      <td>36.619036</td>\n",
        "      <td>15.068923</td>\n",
        "      <td>51.594252</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3621</th>\n",
@@ -142,6 +181,7 @@
        "      <td>36.610102</td>\n",
        "      <td>15.521491</td>\n",
        "      <td>52.040183</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3622</th>\n",
@@ -150,6 +190,7 @@
        "      <td>36.601166</td>\n",
        "      <td>15.974072</td>\n",
        "      <td>52.485999</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3623</th>\n",
@@ -158,6 +199,7 @@
        "      <td>36.592227</td>\n",
        "      <td>16.426655</td>\n",
        "      <td>52.931705</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3624</th>\n",
@@ -166,10 +208,11 @@
        "      <td>36.583287</td>\n",
        "      <td>16.879236</td>\n",
        "      <td>53.377301</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3625 rows × 5 columns</p>\n",
+       "<p>3625 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -186,53 +229,57 @@
        "3623  7.073101e+08 2022-05-31 22:59:59.999010+00:00            36.592227   \n",
        "3624  7.073137e+08 2022-05-31 23:59:59.999011+00:00            36.583287   \n",
        "\n",
-       "      EARTH_MOON2SUN_ANGLE  EARTH_MOON2VEN_ANGLE  \n",
-       "0                25.079659             38.031508  \n",
-       "1                24.498022             37.395046  \n",
-       "2                23.916378             36.758716  \n",
-       "3                23.334757             36.122553  \n",
-       "4                22.753195             35.486595  \n",
-       "...                    ...                   ...  \n",
-       "3620             15.068923             51.594252  \n",
-       "3621             15.521491             52.040183  \n",
-       "3622             15.974072             52.485999  \n",
-       "3623             16.426655             52.931705  \n",
-       "3624             16.879236             53.377301  \n",
+       "      EARTH_MOON2SUN_ANGLE  EARTH_MOON2VEN_ANGLE  GOOD_VISIBILITY  \n",
+       "0                25.079659             38.031508                0  \n",
+       "1                24.498022             37.395046                0  \n",
+       "2                23.916378             36.758716                0  \n",
+       "3                23.334757             36.122553                0  \n",
+       "4                22.753195             35.486595                0  \n",
+       "...                    ...                   ...              ...  \n",
+       "3620             15.068923             51.594252                0  \n",
+       "3621             15.521491             52.040183                0  \n",
+       "3622             15.974072             52.485999                0  \n",
+       "3623             16.426655             52.931705                0  \n",
+       "3624             16.879236             53.377301                0  \n",
        "\n",
-       "[3625 rows x 5 columns]"
+       "[3625 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "INNER_SOLSYS_DF = pd.DataFrame()\n",
-    "INNER_SOLSYS_DF.loc[:, \"ET\"] = TIME_INTERVAL_ET\n",
-    "INNER_SOLSYS_DF.loc[:, \"UTC\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
-    "    lambda x: spiceypy.et2datetime(et=x)\n",
-    ")\n",
-    "\n",
-    "INNER_SOLSYS_DF.loc[:, \"EARTH_VEN2SUN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
-    "    lambda x: np.degrees(\n",
-    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"10\", obsrvr=\"299\", abcorr=\"LT+S\")\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "INNER_SOLSYS_DF.loc[:, \"EARTH_MOON2SUN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
-    "    lambda x: np.degrees(\n",
-    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"10\", obsrvr=\"301\", abcorr=\"LT+S\")\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "INNER_SOLSYS_DF.loc[:, \"EARTH_MOON2VEN_ANGLE\"] = INNER_SOLSYS_DF[\"ET\"].apply(\n",
-    "    lambda x: np.degrees(\n",
-    "        spiceypy.phaseq(et=x, target=\"399\", illmn=\"299\", obsrvr=\"301\", abcorr=\"LT+S\")\n",
-    "    )\n",
+    "INNER_SOLSYS_DF.loc[:, \"GOOD_VISIBILITY\"] = INNER_SOLSYS_DF.apply(\n",
+    "    lambda x: 1\n",
+    "    if (x[\"EARTH_VEN2SUN_ANGLE\"] > 30.0)\n",
+    "    & (x[\"EARTH_MOON2SUN_ANGLE\"] > 30.0)\n",
+    "    & (x[\"EARTH_MOON2VEN_ANGLE\"] < 10.0)\n",
+    "    else 0,\n",
+    "    axis=1,\n",
     ")\n",
     "\n",
     "INNER_SOLSYS_DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good visibility will be available for 122 hours in this time period\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    f\"Good visibility will be available for {len(INNER_SOLSYS_DF.loc[INNER_SOLSYS_DF['GOOD_VISIBILITY'] == 1])} hours in this time period\"\n",
+    ")"
    ]
   }
  ],
